Asynq and Redis for Background workers of SendVerifyEmail eature
