# db/sqlc/models.go
@@ -51,4 +51,16 @@ type User struct {
 	Email                 string             `json:"email"`
 	LastPasswordChangedAt pgtype.Timestamptz `json:"last_password_changed_at"`
 	CreatedAt             pgtype.Timestamptz `json:"created_at"`
+	IsEmailVerified       bool               `json:"is_email_verified"`
+}
+
+type VerifyEmail struct {
+	ID       int64  `json:"id"`
+	Username string `json:"username"`
+	Email    string `json:"email"`
+	// used to verify email
+	SecretCode string             `json:"secret_code"`
+	IsUsed     bool               `json:"is_used"`
+	ExpiredAt  pgtype.Timestamptz `json:"expired_at"`
+	CreatedAt  pgtype.Timestamptz `json:"created_at"`
 }
